Use COSE search rather than our internal keysearch.  Use COSE for storage as well.